finalize dev container setup and updated readme

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -49,4 +49,8 @@ ENV LC_ALL en_US.UTF-8
 # install some python dependencies
 RUN pip install tox genbadge[tests,coverage] numpy matplotlib serums tornado gncpy pytest "setuptools_scm[toml]>=6.2"
 
+RUN python3 -m pip install --upgrade pip
+
+RUN pip install --upgrade setuptools
+
 USER $USERNAME
