--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,10 +17,10 @@
 				"trond-snekvik.simple-rst"
 			]
 		}
-	},
+	}
 	
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "bash"
+	//"postCreateCommand": "bash"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	//"remoteUser": "d",
