--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,12 +25,12 @@
 				"terminal.integrated.shell.linux": "/bin/bash"
 			}
 		}
-	}
+	},
 
 	
 	
 	// Use 'postCreateCommand' to run commands after the container is created.
-	//"postCreateCommand": "bash"
+	"postCreateCommand": "bash"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	//"remoteUser": "d",
